crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B014_B014.py.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
---
B014.py:17:8: B014 [*] Exception handler with duplicate exception: `OSError`
   |
15 | try:
16 |     pass
17 | except (OSError, OSError) as err:
   |        ^^^^^^^^^^^^^^^^^^ B014
18 |     # Duplicate exception types are useless
19 |     pass
   |
   = help: De-duplicate exceptions

ℹ Fix
14 14 | 
15 15 | try:
16 16 |     pass
17    |-except (OSError, OSError) as err:
   17 |+except OSError as err:
18 18 |     # Duplicate exception types are useless
19 19 |     pass
20 20 | 

B014.py:28:8: B014 [*] Exception handler with duplicate exception: `MyError`
   |
26 | try:
27 |     pass
28 | except (MyError, MyError):
   |        ^^^^^^^^^^^^^^^^^^ B014
29 |     # Detect duplicate non-builtin errors
30 |     pass
   |
   = help: De-duplicate exceptions

ℹ Fix
25 25 | 
26 26 | try:
27 27 |     pass
28    |-except (MyError, MyError):
   28 |+except MyError:
29 29 |     # Detect duplicate non-builtin errors
30 30 |     pass
31 31 | 

B014.py:49:8: B014 [*] Exception handler with duplicate exception: `re.error`
   |
47 | try:
48 |     pass
49 | except (re.error, re.error):
   |        ^^^^^^^^^^^^^^^^^^^^ B014
50 |     # Duplicate exception types as attributes
51 |     pass
   |
   = help: De-duplicate exceptions

ℹ Fix
46 46 | 
47 47 | try:
48 48 |     pass
49    |-except (re.error, re.error):
   49 |+except re.error:
50 50 |     # Duplicate exception types as attributes
51 51 |     pass
52 52 | 


